--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server",
-    "build": "webpack -p",
     "test": "jest",
+    "test:watch": "jest --watch",
+    "build": "webpack -p",
     "deploy": "now -prod"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.0",
     "@babel/preset-react": "^7.9.4",
+    "@types/enzyme": "^3.10.5",
+    "@types/enzyme-adapter-react-16": "1.0.6",
     "@types/react": "^16.9.32",
     "@types/react-dom": "^16.9.6",
     "@types/styled-components": "^5.0.1",
@@ -20,6 +23,9 @@
     "@typescript-eslint/parser": "2.26.0",
     "babel-eslint": "10.1.0",
     "babel-loader": "^8.1.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "enzyme-to-json": "^3.5.0",
     "eslint": "6.8.0",
     "eslint-config-airbnb": "18.1.0",
     "eslint-config-airbnb-typescript": "7.2.0",
@@ -40,6 +46,7 @@
     "prettier-eslint": "9.0.1",
     "prettier-eslint-cli": "5.0.0",
     "source-map-loader": "^0.2.4",
+    "ts-jest": "^26.1.3",
     "ts-loader": "^6.2.2",
     "typescript": "^3.8.3",
     "webpack": "^4.42.1",
@@ -47,6 +54,7 @@
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
+    "@types/jest": "^26.0.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.9.0",
