--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.9.0",
+    "react-string-replace": "^0.4.4",
     "styled-components": "^5.0.1"
   },
   "keywords": [],
